/*
 * Licensed to the Apache Software Foundation (ASF) under one or more contributor license
 * agreements. See the NOTICE file distributed with this work for additional information regarding
 * copyright ownership. The ASF licenses this file to you under the Apache License, Version 2.0 (the
 * "License"); you may not use this file except in compliance with the License. You may obtain a
 * copy of the License at
 *
 * http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software distributed under the License
 * is distributed on an "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express
 * or implied. See the License for the specific language governing permissions and limitations under
 * the License.
 */
syntax = "proto3";

package protos;

import "google/protobuf/duration.proto";
import "google/protobuf/timestamp.proto";

option java_outer_classname = "TimeSeriesDataTest";
option java_multiple_files = false;
option java_package = "com.google.dataflow.sample.timeseriesflow";

message Time {
    oneof time_point {

        AdvanceWatermarkExpression advance_watermark_expression = 1;

        int32 advance_watermark_seconds = 2;

        int32 advance_processing_timeSeconds = 3;
    }
}

message TSTimePointTest {
    Time time = 1;

}

enum AdvanceWatermarkExpression {
    LATE_ALLOWED = 0;
    TOO_LATE = 1;
    INFINITY = 2;
}